# ag3tools

./: .env.example  .gitignore  =6.3.0  CHANGELOG.md  README.md  example_find_docs.py  examples_find_docs.py  pyproject.toml  pytest.ini
.cursor/: rules
ag3tools/: __init__.py
ag3tools/adapters/: langchain_tools.py  openai_tools.py
ag3tools/core/: __init__.py  cache.py  cli.py  cost.py  execution.py  llm_instrumentation.py  registry.py  settings.py  types.py
ag3tools/tools/docs/: find_docs.py  find_docs_many.py  find_docs_validated.py  rank_docs.py  rank_docs_llm.py  validate_docs.py  validate_docs_llm.py
ag3tools/tools/net/: fetch_page.py
ag3tools/tools/search/: web_search.py
ag3tools/tools/smithery/: README.md  __init__.py  catalog.py  core.py
ag3tools/tools/smithery/tools/: __init__.py  context7.py  ddgo.py  exa.py
cookbook/: README.md  docs_finder_basic.py  docs_finder_validated.py  example_find_docs.py
data/: llm_costs.json
data/cost_logs/: llm_costs_2025-08-11.jsonl
examples/: smithery_basic.py  smithery_preconfigured.py
scripts/: analyze_costs.py
tests/: conftest.py
tests/core/: test_adapters.py  test_async.py  test_async_contexts.py  test_cli.py  test_cli_improvements.py  test_cost_logging.py  test_error_handling.py  test_execution_engine.py  test_llm_instrumentation.py  test_registry.py
tests/tools/: test_fetch_page.py  test_find_docs_flow.py  test_find_docs_many.py  test_offline_http.py  test_validate_docs.py  test_web_search_cache.py
